@@ -1,3 +1,8 @@
 #简单amazon爬虫
 
 历时３个月爬行约３亿记录，非常稳定，内存占用约３G(主要是去重算法占用),Cpu稳定...
+
+
+java  -Xms3128M -Xmx6024M -Djava.ext.dirs=../lib infifly.amazonapi.fetch.AmazonFetch
+
+
